--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:mongo": "docker-compose -f mongo.yml up -d",
+    "stop:mongo": "docker-compose -f mongo.yml down"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^5.4.1",
+    "@prisma/client": "^5.4.2",
     "daisyui": "^3.9.2",
     "eslint-config-prettier": "^9.0.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
-    "prisma": "^5.4.1",
+    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
