--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "start:mongo": "docker-compose -f mongo.yml up -d",
-    "stop:mongo": "docker-compose -f mongo.yml down"
+    "start:services": "docker-compose up -d",
+    "stop:services": "docker-compose down"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
